benswork/UARProject/force-app/main/default/objects/App_User_Group__c/App_User_Group__c.object-meta.xml
<CustomObject>
    <label>App User Group</label>
    <nameField>
        <displayFormat>AUG-{0000}</displayFormat>
        <label>App User Group ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>App User Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>