benswork/UARProject/force-app/main/default/objects/App_User_Group__c/fields/App_Group_Description__c.field-meta.xml
<CustomField>
    <fullName>App_Group_Description__c</fullName>
    <formula>Related_Groups__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>App Group Description</label>
    <type>Text</type>
</CustomField>