benswork/UARProject/force-app/main/default/objects/App_User_Group__c/fields/App_User__c.field-meta.xml
<CustomField>
    <fullName>App_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>App User</label>
    <referenceTo>App_User__c</referenceTo>
    <relationshipLabel>App User Groups</relationshipLabel>
    <relationshipName>App_User_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>