benswork/UARProject/force-app/main/default/objects/App_User_Group__c/fields/Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Required?</label>
    <type>Checkbox</type>
</CustomField>