benswork/UARProject/force-app/main/default/objects/App_User_Group__c/fields/Group_Description_Formula__c.field-meta.xml
<CustomField>
    <fullName>Group_Description_Formula__c</fullName>
    <formula>Related_Groups__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Description Formula</label>
    <type>Text</type>
</CustomField>