benswork/UARProject/force-app/main/default/objects/App_User_Group__c/fields/Related_Groups__c.field-meta.xml
<CustomField>
    <fullName>Related_Groups__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Groups</label>
    <referenceTo>Related_Groups__c</referenceTo>
    <relationshipLabel>App User Groups</relationshipLabel>
    <relationshipName>App_User_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>