benswork/UARProject/force-app/main/default/objects/App_User_Group__c/validationRules/App_must_match.validationRule-meta.xml
<ValidationRule>
    <fullName>App_must_match</fullName>
    <active>true</active>
    <errorConditionFormula>App_User__r.App__c  &lt;&gt;  Related_Groups__r.App__c</errorConditionFormula>
    <errorMessage>You must choose a group for this Application</errorMessage>
</ValidationRule>